--- a/HELPSMobileFrontEnd/Resources/layout/MakeBookingSesh.axml
+++ b/HELPSMobileFrontEnd/Resources/layout/MakeBookingSesh.axml
@@ -3,13 +3,12 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#eeeeee"
     android:minWidth="25px"
     android:minHeight="25px">
-    <ListView
+    <ExpandableListView
         android:minWidth="25px"
         android:minHeight="25px"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/lvWorkShops" />
+        android:id="@+id/elvExListBox" />
 </LinearLayout>
