--- a/HELPSMobileFrontEnd/Resources/layout/TaskListItem.axml
+++ b/HELPSMobileFrontEnd/Resources/layout/TaskListItem.axml
@@ -3,15 +3,13 @@
     android:orientation="vertical"
     android:id="@+id/lstItemTask"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="#eeeeee">
     <TextView
-        android:id="@+id/NameText"
+        android:id="@+id/tvWorkshops"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView" />
-    <TextView
-        android:id="@+id/NotesText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text="TextView"
+        android:padding="10dp"
+        android:textSize="16dp" />
 </LinearLayout>
