--- a/HELPSMobileFrontEnd/Resources/layout/HelpPage.axml
+++ b/HELPSMobileFrontEnd/Resources/layout/HelpPage.axml
@@ -7,5 +7,6 @@
     <ExpandableListView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:background="#fafafa"
         android:id="@+id/ctlExListBox" />
 </LinearLayout>
