* HELPSMobileFrontEnd.csproj: * Search.axml: * Course.axml: * ProfileActivity.cs: * Profile.axml: * MainMenu.axml: * Resource.designer.cs: * AndroidManifest.xml: * Education.axml: * Icon.png: * Icon.png: * Icon.png: * Registration.axml: * Icon.png: * RegistrationActivity.cs: * bg_main.png: * Icon.png: * ic_list_white_48dp.png: * ic_search_white_48dp.png: * ic_note_add_white_48dp.png: * ic_help_outline_white_48dp.png: * ic_account_circle_white_48dp.png: * ic_check_circle_white_48dp_2x.png:
* HelpActivity.cs: added icon and added all the pages of the
  registration with updates

--- a/HELPSMobileFrontEnd/Resources/layout/MainMenu.axml
+++ b/HELPSMobileFrontEnd/Resources/layout/MainMenu.axml
@@ -20,7 +20,7 @@
             <TableLayout
                 p1:id="@+id/tlNextSession"
                 style="@style/TableLayoutInfo"
-                p1:background="#ffffffff"
+                p1:background="#fafafa"
                 p1:layout_column="0"
                 p1:layout_width="wrap_content">
                 <TableRow
