--- a/HELPSMobileFrontEnd/Resources/layout/Search.axml
+++ b/HELPSMobileFrontEnd/Resources/layout/Search.axml
@@ -4,7 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:id="@+id/llFAQChild"
-    android:background="#fafafa">
+    android:background="#eeeeee">
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -38,7 +38,6 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="#000000"
         android:layout_height="25dp"
-        android:layout_marginTop="15dp"
         android:layout_marginRight="25dp"
         android:background="#fafafa"
         android:layout_below="@+id/ddllanguage"
