--- a/HELPSMobileFrontEnd/Resources/layout/MakeBookingSesh.axml
+++ b/HELPSMobileFrontEnd/Resources/layout/MakeBookingSesh.axml
@@ -5,6 +5,15 @@
     android:layout_height="fill_parent"
     android:minWidth="25px"
     android:minHeight="25px">
+    <TextView
+        android:text="Topics"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#FF444444"
+        android:background="#FFDDDDDD"
+        android:id="@+id/tvSkillSets"
+        android:padding="10dp"
+        android:textSize="20dp" />
     <ExpandableListView
         android:minWidth="25px"
         android:minHeight="25px"
