--- a/HELPSMobileFrontEnd/Resources/layout/MarkAttendance.axml
+++ b/HELPSMobileFrontEnd/Resources/layout/MarkAttendance.axml
@@ -1,8 +1,65 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    >
+    android:id="@+id/llFAQChild"
+    android:background="#eeeeee">
+    <TextView
+        android:text="You are marking off attendance for..."
+        android:textColor="#000000"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="30dp"
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:maxLength="35"
+        android:paddingLeft="5dp"
+        android:fontFamily="arial"
+        android:id="@+id/textView1" />
+    <TextView
+        android:text="Exam Preparation"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#000000"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="10dp"
+        android:textStyle="bold"
+        android:id="@+id/lblchanges"
+        android:layout_width="match_parent"
+        android:layout_height="28.3dp" />
+    <TextView
+        android:text="A staff member should have provided you with a code to enter in the box below which marks you off as attending the booking sessions."
+        android:layout_width="match_parent"
+        android:textColor="#000000"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="30dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView2" />
+    <EditText
+        android:inputType="textPersonName"
+        android:textColor="#ff000000"
+        android:background="@drawable/edittextrounded"
+        android:hint="Type the session code here ..."
+        android:textColorHint="#AAAAAA"
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="20dp"
+        android:maxLength="35"
+        android:paddingLeft="5dp"
+        android:fontFamily="arial"
+        android:id="@+id/txtsearch" />
+    <Button
+        android:text="Submit"
+        android:layout_width="80dp"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_marginRight="10dp"
+        android:background="#1976d2"
+        android:layout_height="35dp"
+        android:textColor="#ffffff"
+        android:layout_marginTop="15dp"
+        android:layout_gravity="right"
+        android:id="@+id/button1" />
 </LinearLayout>
-
