--- a/HELPSMobileFrontEnd/Resources/layout/MarkAttendance.axml
+++ b/HELPSMobileFrontEnd/Resources/layout/MarkAttendance.axml
@@ -58,6 +58,10 @@
         android:layout_marginRight="10dp"
         android:background="#1976d2"
         android:layout_height="35dp"
+        android:shadowColor="#000"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="50"
         android:textColor="#ffffff"
         android:layout_marginTop="15dp"
         android:layout_gravity="right"
