--- a/HELPSMobileFrontEnd/Resources/layout/Registration.axml
+++ b/HELPSMobileFrontEnd/Resources/layout/Registration.axml
@@ -4,15 +4,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:minWidth="25px"
-    android:minHeight="25px">
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#E53935" />
-<!--E53935-->
-    <FrameLayout
-        android:id="@+id/flTabs"
-        android:layout_weight="2"
-        android:layout_width="match_parent"
-        android:layout_height="0px" />
-</LinearLayout>
+    android:minHeight="25px" />
