--- a/HELPSMobileFrontEnd/Resources/layout/TabsLayout.axml
+++ b/HELPSMobileFrontEnd/Resources/layout/TabsLayout.axml
@@ -8,8 +8,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#E53935" />
-<!--E53935-->
+        android:background="#1976D2" />
     <FrameLayout
         android:id="@+id/flTabs"
         android:layout_weight="2"
