Changes with login

--- a/HELPSMobileFrontEnd/Resources/layout/MarkAttendance.axml
+++ b/HELPSMobileFrontEnd/Resources/layout/MarkAttendance.axml
@@ -65,5 +65,5 @@
         android:textColor="#ffffff"
         android:layout_marginTop="15dp"
         android:layout_gravity="right"
-        android:id="@+id/button1" />
+        android:id="@+id/btnSubmit" />
 </LinearLayout>
