--- a/HELPSMobileFrontEnd/Resources/layout/Search.axml
+++ b/HELPSMobileFrontEnd/Resources/layout/Search.axml
@@ -62,4 +62,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/ddpSearch" />
+    <ListView
+        android:minWidth="25px"
+        android:minHeight="25px"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/lvlWorkShops" />
 </LinearLayout>
